--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -11,8 +11,7 @@
 
 <main>
     <div class="jumbotron">
-        <h1>This is great</h1>
-        <p>Welcome to templating using EJS</p>
+        <h1>Facebook Login</h1>
     </div>
 </main>
 
