--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -3,13 +3,11 @@
     
         <div class="navbar-header">
             <a class="navbar-brand" href="#">
-                <span class="glyphicon glyphicon glyphicon-tree-deciduous"></span>
-                EJS Is Fun
+                Facebook Chatbot
             </a>
     
             <ul class="nav navbar-nav">
                 <li><a href="/">Home</a></li>
-                <li><a href="/about">About</a></li>
             </ul>
         </div>
     
