--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -3,7 +3,7 @@
     
         <div class="navbar-header">
             <a class="navbar-brand" href="#">
-                Facebook Chatbot
+                Facebook Chatbot Demo
             </a>
     
             <ul class="nav navbar-nav">
