--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,15 +1,18 @@
 <nav class="navbar navbar-default" role="navigation">
     <div class="container-fluid">
-    
+
         <div class="navbar-header">
             <a class="navbar-brand" href="#">
-                Facebook Chatbot Demo
+                <span class="glyphicon glyphicon glyphicon-tree-deciduous"></span>
+                Broadcasting Messaging to Facebook Users
             </a>
-    
-            <ul class="nav navbar-nav">
-                <li><a href="/">Home</a></li>
-            </ul>
         </div>
-    
+        <ul class="nav navbar-nav">
+            <li><a href="/broadcast/">Home</a></li>
+            <li><a href="/broadcast/broadcast">Broadcast</a></li>
+            <li><a href="/broadcast/logout">Logout</a></li>
+        </ul>
+
+
     </div>
-    </nav>
+</nav>
