--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <% include partials/head %>
+    <% include ./partials/head %>
 </head>
 <body class="container">
 
@@ -19,7 +19,7 @@
 </main>
 
 <footer>
-    <% include partials/footer %>
+    <% include ./partials/footer %>
 </footer>
 
 </body>
