--- a/views/pages/broadcast.ejs
+++ b/views/pages/broadcast.ejs
@@ -13,10 +13,10 @@
 <main>
     <div class="container">
         <h2>Hello, <%= user.displayName %></h2>
-        <p><%= user.id %></p>
-        <p><%- JSON.stringify(user) %></p>
+        <!-- <p><%= user.id %></p>
+        <p><%- JSON.stringify(user) %></p> -->
 
-        <!-- <form class="form-horizontal" method="post" action="/broadcast/broadcast">
+        <form class="form-horizontal" method="post" action="/broadcast/broadcast">
             <div class="form-group">
                 <label class="control-label col-sm-2" for="email">Send as a:</label>
                 <div class="col-sm-10">
@@ -40,7 +40,7 @@
                     <a class="btn btn-default" href="/">Cancel</a>
                 </div>
             </div>
-        </form> -->
+        </form>
     </div>
 </main>
 
