--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -14,7 +14,7 @@
     <div class="container">
 
         <h2>Welcome! Please log in.</h2>
-        <a href="/auth/facebook"><img src=".../public/assets/facebook-login.png"></a>
+        <a href="/auth/facebook"><img src="../public/assets/facebook-login.png"></a>
     </div>
 </main>
 
