--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -14,7 +14,10 @@
     <div class="container">
 
         <h2>Welcome! Please log in.</h2>
-        <a href="/auth/facebook"><img src="https://scontent-sin6-2.xx.fbcdn.net/v/t39.2365-6/16344632_403881753293914_7761668832074137600_n.png?_nc_cat=107&oh=bb40de6262bddbedefd3cc47da4a435e&oe=5C5E7DED"></a>
+        <a href="/auth/facebook">
+            <img src="https://scontent-sin6-2.xx.fbcdn.net/v/t39.2365-6/16344632_403881753293914_7761668832074137600_n.png?_nc_cat=107&oh=bb40de6262bddbedefd3cc47da4a435e&oe=5C5E7DED"
+            width="20%" height="10%"
+            ></a>
     </div>
 </main>
 
