--- a/views/pages/broadcast.ejs
+++ b/views/pages/broadcast.ejs
@@ -17,7 +17,7 @@
         <p><%- JSON.stringify(user) %></p> -->
 
         <form class="form-horizontal" method="post" action="/broadcast/broadcast">
-            <div class="form-group">
+            <!-- <div class="form-group">
                 <label class="control-label col-sm-2" for="email">Send as a:</label>
                 <div class="col-sm-10">
                     <div class="radio">
@@ -27,7 +27,7 @@
                         <label><input type="radio" name="newstype" value="2">daily news</label>
                     </div>
                 </div>
-            </div>
+            </div> -->
             <div class="form-group">
                 <label class="control-label col-sm-2" for="email">Message:</label>
                 <div class="col-sm-10">
@@ -37,7 +37,7 @@
             <div class="form-group">
                 <div class="col-sm-offset-2 col-sm-10">
                     <button type="submit" class="btn btn-success">Submit</button>
-                    <a class="btn btn-default" href="/">Cancel</a>
+                    <a class="btn btn-default" href="/broadcast">Cancel</a>
                 </div>
             </div>
         </form>
