--- a/views/pages/broadcast-sent.ejs
+++ b/views/pages/broadcast-sent.ejs
@@ -26,17 +26,19 @@
                 <% } %>
             </div> -->
         </div>
-        <!-- <div class="row">
+        <div class="row">
             <div class="col-md-12 col-xs-12">
-                <p>Message was sent to <strong><%= numUsers %></strong> users.</p>
-                <p>List of all users:</p>
-                <ul>
+                <p>Message was sent to <strong><%= user.displayName %></p>
+
+                <!-- <p>Message was sent to <strong><%= numUsers %></strong> users.</p> -->
+                <!-- <p>List of all users:</p> -->
+                <!-- <ul>
                     <% users.forEach(function(user) { %>
                     <li><%= user.first_name %> <%= user.last_name %></li>
                     <% }) %>
-                </ul>
+                </ul> -->
             </div>
-        </div> -->
+        </div>
     </div>
 </main>
 
