--- a/views/pages/sent.ejs
+++ b/views/pages/sent.ejs
@@ -14,8 +14,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-4 col-xs-12">
-                <p>Message to be sent:</p>
-                <textarea readonly><%= message %></textarea>
+                <p>Message to be sent:<strong><%= message %></strong></p>
             </div>
         </div>
         <div class="row">
@@ -24,6 +23,7 @@
             </div>
         </div>
     </div>
+    <a class="btn btn-default" href="/broadcast/broadcast">Send Another Message</a>
 </main>
 
 <footer>
