--- a/views/pages/sent.ejs
+++ b/views/pages/sent.ejs
@@ -17,11 +17,11 @@
                 <p>Message to be sent:<strong><%= message %></strong></p>
             </div>
         </div>
-        <div class="row">
+        <!-- <div class="row">
             <div class="col-md-12 col-xs-12">
                 <p>Message was sent to <strong><%= user.displayName %></p>
             </div>
-        </div>
+        </div> -->
     </div>
     <a class="btn btn-default" href="/broadcast/broadcast">Send Another Message</a>
 </main>
